...
                                    crossAxisAlignment:
                                        CrossAxisAlignment.center,
                                    children: [
                                      Container(
                                        width: 350.0,
                                        child: TextFormField(
                                          key: ValueKey('sign-upEmail_dm1t'),
                                          controller:
                                              _model.signUpEmailTextController,
                                          focusNode:
                                              _model.signUpEmailFocusNode,
                                          onChanged: (_) =>
                                              EasyDebounce.debounce(
...
                                              .asValidator(context),
                                        ),
                                      ),
                                      Container(
                                        width: 350.0,
                                        child: TextFormField(
                                          key: ValueKey('SignupPass_a8py'),
                                          controller:
                                              _model.signupPassTextController,
                                          focusNode: _model.signupPassFocusNode,
                                          autofocus: false,
                                          textInputAction: TextInputAction.next,
                                          obscureText:
...
                                              .asValidator(context),
                                        ),
                                      ),
                                      Container(
                                        width: 350.0,
                                        child: TextFormField(
                                          key: ValueKey('ConfirmPass_sz44'),
                                          controller:
                                              _model.confirmPassTextController,
                                          focusNode:
                                              _model.confirmPassFocusNode,
                                          autofocus: false,
                                          textInputAction: TextInputAction.next,
...
                                  mainAxisSize: MainAxisSize.max,
                                  crossAxisAlignment: CrossAxisAlignment.center,
                                  children: [
                                    Container(
                                      width: 350.0,
                                      child: TextFormField(
                                        key: ValueKey('loginEmail_w7y6'),
                                        controller:
                                            _model.loginEmailTextController,
                                        focusNode: _model.loginEmailFocusNode,
                                        onChanged: (_) => EasyDebounce.debounce(
                                          '_model.loginEmailTextController',
                                          Duration(milliseconds: 2000),
...
                                            .asValidator(context),
                                      ),
                                    ),
                                    Container(
                                      width: 350.0,
                                      child: TextFormField(
                                        key: ValueKey('loginPass_jm9g'),
                                        controller:
                                            _model.loginPassTextController,
                                        focusNode: _model.loginPassFocusNode,
                                        autofocus: false,
                                        textInputAction: TextInputAction.next,
                                        obscureText:
...
                          ),
                          borderRadius: BorderRadius.circular(20.0),
                        ),
                      ),
                      if (_model.tabBarCurrentIndex == 0)
                        FFButtonWidget(
                          key: ValueKey('SignUpButton_mojk'),
                          onPressed: () async {
                            logFirebaseEvent(
                                'SIGNUP_AND_LOGIN_SignUpButton_ON_TAP');
                            logFirebaseEvent('SignUpButton_validate_form');
                            if (_model.formKey.currentState == null ||
                                !_model.formKey.currentState!.validate()) {
...
