...
                                fontStyle: FlutterFlowTheme.of(context)
                                    .bodyMedium
                                    .fontStyle,
                              ),
                        ),
                        FlutterFlowDropDown<String>(
                          key: ValueKey('CurConvFromText_40w8'),
                          controller: _model.curConvFromTextValueController ??=
                              FormFieldController<String>(null),
                          options: [
                            'USD (US Dollar)',
                            'EUR (Euro)',
                            'JPY (Yen)',
...
                          hidesUnderline: true,
                          isOverButton: false,
                          isSearchable: false,
                          isMultiSelect: false,
                        ),
                        FlutterFlowDropDown<String>(
                          key: ValueKey('CurConvToText_kl9w'),
                          controller: _model.curConvToTextValueController ??=
                              FormFieldController<String>(null),
                          options: [
                            'EUR (Euro)',
                            'JPY (Yen)',
                            'GBP (British Pound)',
...
                          isSearchable: false,
                          isMultiSelect: false,
                        ),
                        Container(
                          width: 350.0,
                          child: TextFormField(
                            key: ValueKey('CurConvInputText_khin'),
                            controller: _model.curConvInputTextTextController,
                            focusNode: _model.curConvInputTextFocusNode,
                            onChanged: (_) => EasyDebounce.debounce(
                              '_model.curConvInputTextTextController',
                              Duration(milliseconds: 2000),
                              () => safeSetState(() {}),
...
                            validator: _model
                                .curConvInputTextTextControllerValidator
                                .asValidator(context),
                          ),
                        ),
                        FFButtonWidget(
                          key: ValueKey('Button_32fp'),
                          onPressed: () async {
                            logFirebaseEvent(
                                'CURRENCY_CONVERTER_CONVERT_BTN_ON_TAP');
                            logFirebaseEvent('Button_custom_action');
                            _model.output = await actions.currConverter(
                              double.parse(
...
