...
                                                      .fromSTEB(
                                                          0.0, 0.0, 10.0, 0.0),
                                                  child: Container(
                                                    width: 350.0,
                                                    child: TextFormField(
                                                      key: ValueKey(
                                                          'Addemail_wm6l'),
                                                      controller: _model
                                                          .addemailTextController,
                                                      focusNode: _model
                                                          .addemailFocusNode,
                                                      onChanged: (_) =>
                                                          EasyDebounce.debounce(
...
                                                          .asValidator(context),
                                                    ),
                                                  ),
                                                ),
                                              ),
                                              FFButtonWidget(
                                                key: ValueKey('Button_tqdf'),
                                                onPressed: () async {
                                                  logFirebaseEvent(
                                                      'ADD_TRIP_PAGE_ADD_BTN_ON_TAP');
                                                  logFirebaseEvent(
                                                      'Button_validate_form');
                                                  if (_model.formKey
...
                                    ),
                                  ),
                                ].divide(SizedBox(height: 12.0)),
                              ),
                            ),
                            FFButtonWidget(
                              key: ValueKey('Button_m9fg'),
                              onPressed: () async {
                                logFirebaseEvent(
                                    'ADD_TRIP_PAGE_ADD_NEW_TRIP_BTN_ON_TAP');
                                logFirebaseEvent('Button_validate_form');
                                if (_model.formKey.currentState == null ||
                                    !_model.formKey.currentState!.validate()) {
...
